--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.resources.static-locations =classpath:static/
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 #ChatGPT
-chatgpt.token=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
-chatgpt.proxy-host=127.0.0.1
-chatgpt.proxy-port=10811
+chatgpt.token
+#chatgpt.proxy-host=127.0.0.1
+#chatgpt.proxy-port=10811
 chatgpt.session-expiration-time=30
 
 logging.level.com.bee.community.dao=debug
