--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.thymeleaf.cache=false
 spring.datasource.name=my-bbs-datasource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/zl?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=abc123
+spring.datasource.username=*****
+spring.datasource.password=*****
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.auto-commit=true
@@ -25,7 +25,7 @@ spring.resources.static-locations =classpath:static/
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 #ChatGPT
-chatgpt.token
+chatgpt.token= *********
 #chatgpt.proxy-host=127.0.0.1
 #chatgpt.proxy-port=10811
 chatgpt.session-expiration-time=30
